--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
   <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-  
+  <header>
+    <h1 class="hd-logo">SALON BEPPU</h1>
+    <nav class="nav">
+      <ul>
+        <li><a href="#menu">MENU</a></li>
+        <li><a href="#concept">CONCEPT</a></li>
+        <li><a href="#access">ACCESS</a></li>
+        <li><a href="#">RESERVE</a></li>
+      </ul>
+    </nav>
+  </header>
 </body>
 </html>
