created first view

--- a/index.html
+++ b/index.html
@@ -11,12 +11,26 @@
     <h1 class="hd-logo">SALON BEPPU</h1>
     <nav class="nav">
       <ul>
-        <li><a href="#menu">MENU</a></li>
+        <li><a href="#">MENU</a></li>
         <li><a href="#concept">CONCEPT</a></li>
         <li><a href="#access">ACCESS</a></li>
         <li><a href="#">RESERVE</a></li>
       </ul>
     </nav>
   </header>
+
+  <main>
+    <section id="first-view">
+      <div class="fv-box__title">
+        <div class="fv-title">
+          <h2 class="fv-title__1">髪は、大事です。</h2>
+          <h2 class="fv-title__2">We need Hair.</h2>
+        </div>
+      </div>
+      <div class="fv-box__img"></div>
+      
+    </section>
+  </main>
+
 </body>
 </html>
