--- a/index.html
+++ b/index.html
@@ -28,8 +28,22 @@
         </div>
       </div>
       <div class="fv-box__img"></div>
-      
     </section>
+
+    <section id="concept">
+      <div class="wrap concept-wrap">
+        <h2 class="title">CONCEPT</h2>
+        <div class="concept-img">
+          <div class="concept-img__1"><img src="./img/concept-img-1.png" alt=""></div>
+          <div class="concept-img__2"><img src="./img/concept-img-2.png" alt=""></div>
+        </div>
+        <div class="concept-intro">
+          <h3 class="concept-intro__title">髪は、大事です。</h3>
+          <p class="concept-intro__desc">テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト。</p>
+        </div>
+      </div>
+    </section>
+
   </main>
 
 </body>
