--- a/index.html
+++ b/index.html
@@ -44,6 +44,44 @@
       </div>
     </section>
 
+    <section id="menu">
+      <div class="wrap menu-wrap">
+        <h2 class="title">MENU</h2>
+        <section class="menu-item-wrap">
+          <div class="menu-item">
+            <div class="menu-item__img">
+              <img src="./img/design-cut-img.png" alt="">
+            </div>
+            <div class="menu-content">
+              <h3 class="menu-content__title">Design Cut</h3>
+              <p class="menu-content__desc">テキストテキストテキスト。テキストテキストテキスト。テキストテキストテキスト。テキストテキストテキスト。テキストテキストテキスト。</p>
+              <p class="menu-content__price">￥9,800(税別)</p>
+            </div>
+          </div>
+          <div class="menu-item">
+            <div class="menu-item__img">
+              <img src="./img/design-perm-img.png" alt="">
+            </div>
+            <div class="menu-content">
+              <h3 class="menu-content__title">Design Perm</h3>
+              <p class="menu-content__desc">テキストテキストテキスト。テキストテキストテキスト。テキストテキストテキスト。テキストテキストテキスト。テキストテキストテキスト。</p>
+              <p class="menu-content__price">￥19,800～(税別)</p>
+            </div>
+          </div>
+          <div class="menu-item">
+            <div class="menu-item__img">
+              <img src="./img/make-up-img.png" alt="">
+            </div>
+            <div class="menu-content">
+              <h3 class="menu-content__title">Make Up</h3>
+              <p class="menu-content__desc">テキストテキストテキスト。テキストテキストテキスト。テキストテキストテキスト。テキストテキストテキスト。テキストテキストテキスト。</p>
+              <p class="menu-content__price">￥8,800～(税別)</p>
+            </div>
+          </div>
+
+        </section>
+      </div>
+    </section>
   </main>
 
 </body>
