--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Salon Beppu</title>
   <link rel="stylesheet" href="./css/main.css">
+  <script src="https://kit.fontawesome.com/c1c3bf744a.js" crossorigin="anonymous"></script>
+
 </head>
 <body>
   <header>
@@ -105,5 +107,18 @@
     </section>
   </main>
 
+  <footer>
+    <div class="footer-inner">
+      <h1>
+        <span class="footer-logo__text">SALON BEPPU</span>
+        <span class="footer-logo__icon">
+          <i class="fab fa-twitter twitter"></i>
+          <i class="fab fa-facebook-square facebook"></i>
+        </span>
+      </h1>
+      <a href="#" class="reserve-btn">RESERVE</a>
+    </div>
+    
+  </footer>
 </body>
 </html>
