--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
 <body>
   <header>
     <h1 class="hd-logo">SALON BEPPU</h1>
+    <div class="ham">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
     <nav class="nav">
       <ul>
         <li><a href="#">MENU</a></li>
@@ -25,8 +30,8 @@
     <section id="first-view">
       <div class="fv-box__title">
         <div class="fv-title">
-          <h2 class="fv-title__1">髪は、大事です。</h2>
-          <h2 class="fv-title__2">We need Hair.</h2>
+          <h2 class="fv-title__ja">髪は、大事です。</h2>
+          <h2 class="fv-title__en">We need Hair.</h2>
         </div>
       </div>
       <div class="fv-box__img"></div>
@@ -109,7 +114,7 @@
 
   <footer>
     <div class="footer-inner">
-      <h1>
+      <h1 class="footer-logo">
         <span class="footer-logo__text">SALON BEPPU</span>
         <span class="footer-logo__icon">
           <i class="fab fa-twitter twitter"></i>
